  - (sharktooth) [x264] Enabled Trellis with no-cabac option (requires x264 rev 1703+)
  - (zathor) [FPSChooser] + [TargetSizeSCBox] fixed custom FPS and file size saving
  - (zathor) [LogItem] changed default log type to information
  - (zathor) [HDBDStreamExtractor] HdBrStreamExtractor.txt not created anymore
  - (zathor) [HDStreamExtractorIndexer] improved log handling

0.3.5.8
  - (zathor) enhanced error handling of the profile import. an unsuccessful 
             or interrupted profile update will be marked as still missing.
  - (zathor) [x264Encoder] --min-keyint will not be applied if the default value is used

0.3.5.7
  - (sharktooth) [x264ConfigurationPanel] Fix default CRF value when changing from bitrate mode to CRF. Adjusted default bitrate to 1000
  - (zathor) [FileIndexer] improved handling if DGIndexNV is not available
  - (zathor) [MkvMergeMuxer] header compression is disabled for all tracks
  - (zathor) [MainForm] slightly tweaked file\open

0.3.5.6
  - (sharktooth) [x264] Added --sar option to force SAR for BD or other devices compatibility
  - (zathor) removed CUVIDServer handling (requires at least DGIndexNV 2020)
  - (zathor) changed DGMultiSource() to DGSource() and DGMultiDecodeNV.dll to DGDecodeNV.dll (requires at least DGIndexNV 2021)
  - (zathor) [VideoUtil] I420 is accepted as avisynth output colorspace
  - (zathor) [ffmsReader] + [ScriptServer] removed the YV12 colorspace conversion from the FFVideoSource() call

0.3.5.5
  - (sharktooth) [x264] Added --pulldown option plus some various fixes
  - (sharktooth) [x264] Added --colorprim, --transfer and --colormatrix options
  - (sharktooth) [x264] Added --non-deterministic support plus some cosmetic changes

0.3.5.4
  - (sharktooth) [x264] AVCProfile and AVCLevel groupboxes Enable status now depends on the Show Advanced Settings status
  - (sharktooth) [x264] Moved Profile and Level to the main tab and made some more space for more VUI options