@@ -6,6 +6,9 @@
   - (zathor) [LogItem] changed default log type to information
   - (zathor) [HDBDStreamExtractor] HdBrStreamExtractor.txt not created anymore
   - (zathor) [HDStreamExtractorIndexer] improved log handling
+  - (zathor) [JobQueue] fixed load context menu option. Bug #3024349
+  - (zathor) [MuxWindow] language and video name will be visible during load. Bug #3024349
+  - (zathor) [JobQueue] enhanced load handling
 
 0.3.5.8
   - (zathor) enhanced error handling of the profile import. an unsuccessful 
